--- a/Nivel2-B/Documentos/Guia/guia5.tex
+++ b/Nivel2-B/Documentos/Guia/guia5.tex
@@ -1,6 +1,6 @@
 \chapter{Introducción a aplicaciones}
 
-Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso, para la detección se espejos de agua, utilizando imágenes \emph{Sentinel 1}. Se trabajrá con las inundaciones de octubre de 2017 en la zona de Chascomús, provincia de Buenos Aires, Argentina.
+Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso, para la detección se espejos de agua, utilizando imágenes \emph{Sentinel 1}. Se trabajará con las inundaciones de octubre de 2017 en la zona de Chascomús, provincia de Buenos Aires, Argentina.
 
 % Imagen antes
 % S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1
@@ -14,18 +14,20 @@ Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso
 \section{Actividades}
 
 \begin{que}
-    Descargue la imagen del 10 de octubre del 2017
+    Descargue la imagen del 7 de octubre del 2017
     \begin{center}\path{ S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
 \end{que}
 
 \begin{que}
-    Con la herramienta \menu{Raster>Subset} (Figura \ref{fig:coordenadas}) haga un recorte entre las coordenadas geográficas
+    Con la herramienta \menu{Raster>Subset} (Figura \ref{fig:coordenadas})
     \begin{figure}[h!]
         \centering
-        \includegraphics[scale=0.4]{fig:coordenadas.png}
+        \includegraphics[scale=0.35]{fig:coordenadas.png}
         \caption{Subset espacial de una imagen en SNAP. Se reliza en este caso utilizando las coordenadas geográficas.}
         \label{fig:coordenadas}
     \end{figure}
+
+    haga un recorte entre las coordenadas geográficas
     \begin{itemize}
         \item Latitud norte: -35.632
         \item Longitud oeste: -57.395
