--- a/Nivel2-B/Documentos/Guia/preamble.tex
+++ b/Nivel2-B/Documentos/Guia/preamble.tex
@@ -73,5 +73,5 @@
 \theoremstyle{definition}
 \newtheorem{exa}{Ejemplo}[section]
 \newtheorem*{obs}{Observación}
-\newtheorem{que}{Pregunta}[section]
+\newtheorem{que}{}[section]
 \newtheorem{dex}{Definicion}[section]
